# AiTiGuruTZ

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.puml
init-scripts/: initdb.sql
src/order_service/: config.py  crud.py  database.py  dependencies.py  exceptions.py  main.py  models.py  schemas.py
src/order_service/routers/: orders.py
